--- a/.env.dist
+++ b/.env.dist
@@ -1,15 +1,25 @@
 # prefix for containers
-COMPOSE_PROJECT_NAME=my-project
+COMPOSE_PROJECT_NAME=sfpm
 
 # prod|dev for containers config
 CONTAINER_ENV=dev
 
 # database
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=my-project
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_HOST=localhost
+ROOT_DB_USER=root
+ROOT_DB_PASSWORD=root
+ROOT_DB_NAME=sfpm
+
+BITBUCKET_USER=
+BITBUCKET_PASSWORD=
+BITBUCKET_REPOSITORY_URL=
+APP_VERSION=
+
+# Apache
+NAMESERVER=sfpm.docker
+SSL_MODE=0
+AUTOSIGNED_CERT=0
+HTTPD_PORT=80
+PHP_FPM_HANDLER=php_sfpm
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -29,5 +39,5 @@ MAILER_URL=null://localhost
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@my-project-database:3306/my-project
+DATABASE_URL=mysql://root:root@my-project-database:3306/my-project
 ###< doctrine/doctrine-bundle ###
