--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -1,22 +1,54 @@
 version: '3'
 
-volumes:
-  database:
-    driver: local
+networks:
+  web:
+    external:
+      name: traefik
 
 services:
-  my-project-database:
+  php:
     volumes:
-      - database:/var/lib/mysql
+      - ./:/var/www/html
+    env_file:
+      - .env
+    labels:
+      - "traefik.enable=false"
 
-  my-project-phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: ${COMPOSE_PROJECT_NAME}_phpmyadmin
+  apache:
+    volumes:
+      - ./public:/var/www/html/public
+    ports:
+      - 8090:${HTTPD_PORT}
+    labels:
+      - "traefik.backend=${COMPOSE_PROJECT_NAME}"
+      - "traefik.frontend.rule=Host:${COMPOSE_PROJECT_NAME}.docker"
+      - "traefik.port=${HTTPD_PORT}"
+      - "traefik.frontend.passHostHeader=true"
+
+  database:
+    ports:
+      - 27017:27017
+    labels:
+      - "traefik.enable=false"
+
+  webpack:
+    ports:
+      - 8081:80
+    labels:
+      - "traefik.enable=false"
+
+  adminer:
+    container_name: ${COMPOSE_PROJECT_NAME}_adminer
+    build:
+      context: docker/adminer
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - PMA_HOST=my-project-database
-      - DOMAIN_NAME=my-project-phpmyadmin.docker
-      - VIRTUAL_PORT=80
-      - VIRTUAL_HOST=my-project-phpmyadmin.docker
+      - ADMINER_DESIGN=nette
     networks:
-      - reverse_proxy
+      - web
+    ports:
+      - 8080:8080
+    labels:
+      - "traefik.backend=${COMPOSE_PROJECT_NAME}.adminer"
+      - "traefik.frontend.rule=Host:${COMPOSE_PROJECT_NAME}.adminer.docker"
+      - "traefik.port=8080"
+      - "traefik.frontend.passHostHeader=true"
