--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,58 @@
 version: '3'
 
 networks:
-  reverse_proxy:
-    external:
-      name: reverse_proxy
+  web: ~
 
 services:
-  my-project-php:
+  php:
     container_name: ${COMPOSE_PROJECT_NAME}_php
     build:
-      context: ./docker/php
-    volumes:
-      - ./:/var/www/html
-      - ./docker/php/php-fpm-${CONTAINER_ENV}.conf:/usr/local/etc/php-fpm.d/php-fpm.conf
-      - ./docker/php/www-${CONTAINER_ENV}.conf:/usr/local/etc/php-fpm.d/pool.d/www.conf
-      - ./docker/php/php-${CONTAINER_ENV}.ini:/usr/local/etc/php/conf.d/php.ini
-    env_file:
-      - .env
-    environment:
-      - COMPOSER_MEMORY_LIMIT=-1
+      context: docker/php
+      args:
+        - BITBUCKET_USER=${BITBUCKET_USER}
+        - BITBUCKET_PASSWORD=${BITBUCKET_PASSWORD}
+        - BITBUCKET_REPOSITORY_URL=${BITBUCKET_REPOSITORY_URL}
+        - APP_VERSION=${APP_VERSION}
     networks:
-      - reverse_proxy
-    depends_on:
-      - my-project-database
+      web:
+        aliases:
+          - php_${COMPOSE_PROJECT_NAME}
 
-  my-project-apache:
+  apache:
     container_name: ${COMPOSE_PROJECT_NAME}_apache
     build:
-      context: ./docker/apache
-    volumes:
-      - ./:/var/www/html
+      context: docker/apache
+    depends_on:
+      - php
     environment:
-      - VIRTUAL_PORT=80
-      - VIRTUAL_HOST=my-project-php.docker
+      - NAMESERVER=${NAMESERVER}
+      - SSL_MODE=${SSL_MODE}
+      - AUTOSIGNED_CERT=${AUTOSIGNED_CERT}
+      - HTTPD_LOG_DIR=/usr/local/apache2/logs
+      - HTTPD_PORT=${HTTPD_PORT}
+      - PHP_FPM_HANDLER=php_${COMPOSE_PROJECT_NAME}
     networks:
-      reverse_proxy:
-        aliases:
-          - web-serv
+      - web
 
-  my-project-database:
+  database:
     container_name: ${COMPOSE_PROJECT_NAME}_database
-    build:
-      context: ./docker/mariadb
-    volumes:
-      - ./:/var/www/html
-    env_file:
-      - .env
+    image: mongo:4.1-xenial
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-    healthcheck:
-      test: mysql --user=root --password=root --execute "show databases"
-      interval: 5s
-      timeout:  1s
-      retries:  3
-    ports:
-      - 127.0.0.1:3306:3306
+      - MONGO_INITDB_ROOT_USERNAME=${ROOT_DB_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${ROOT_DB_PASSWORD}
+      - MONGO_INITDB_DATABASE=${ROOT_DB_NAME}
     networks:
-      - reverse_proxy
+      - web
 
-  my-project-webpack:
+  webpack:
     container_name: ${COMPOSE_PROJECT_NAME}_webpack
     build:
       context: ./docker/webpack
-    hostname: ${COMPOSE_PROJECT_NAME}-webpack
-    volumes:
-      - ./:/app
+    depends_on:
+      - php
     env_file:
       - .env
-    ports:
-      - 127.0.0.1:8080:8080
-    networks:
-      - reverse_proxy
-    depends_on:
-      - my-project-php
-
-  reverse_proxy:
-    image: jwilder/nginx-proxy
-    ports:
-      - 80:80
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./:/app
     networks:
-      - reverse_proxy
+      - web
