--- a/docker/apache/httpd.conf
+++ b/docker/apache/httpd.conf
@@ -49,7 +49,7 @@ ServerRoot "/usr/local/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen ${HTTPD_PORT}
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -91,7 +91,7 @@ LoadModule auth_basic_module modules/mod_auth_basic.so
 #LoadModule cache_module modules/mod_cache.so
 #LoadModule cache_disk_module modules/mod_cache_disk.so
 #LoadModule cache_socache_module modules/mod_cache_socache.so
-LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule socache_dbm_module modules/mod_socache_dbm.so
 #LoadModule socache_memcache_module modules/mod_socache_memcache.so
 #LoadModule watchdog_module modules/mod_watchdog.so
@@ -156,13 +156,13 @@ LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule session_dbd_module modules/mod_session_dbd.so
 #LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
 #LoadModule slotmem_plain_module modules/mod_slotmem_plain.so
-LoadModule ssl_module modules/mod_ssl.so
+#LoadModule ssl_module modules/mod_ssl.so
 #LoadModule optional_hook_export_module modules/mod_optional_hook_export.so
 #LoadModule optional_hook_import_module modules/mod_optional_hook_import.so
 #LoadModule optional_fn_import_module modules/mod_optional_fn_import.so
 #LoadModule optional_fn_export_module modules/mod_optional_fn_export.so
 #LoadModule dialup_module modules/mod_dialup.so
-LoadModule http2_module modules/mod_http2.so
+#LoadModule http2_module modules/mod_http2.so
 #LoadModule proxy_http2_module modules/mod_proxy_http2.so
 #LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
@@ -226,7 +226,7 @@ Group www-data
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin admin@wynd.eu
+ServerAdmin admin@contact.eu
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -362,7 +362,7 @@ DocumentRoot "/var/www/html/public"
     </IfModule>
 
     <FilesMatch ".+\.ph(ar|p|tml)$">
-        SetHandler "proxy:fcgi://my-project-php:9000"
+        SetHandler "proxy:fcgi://${PHP_FPM_HANDLER}:9000"
     </FilesMatch>
     <FilesMatch ".+\.phps$">
         # Deny access to raw php sources by default
@@ -674,7 +674,7 @@ LogLevel warn
 #Include conf/extra/httpd-info.conf
 
 # Virtual hosts
-#Include conf/extra/httpd-vhosts.conf
+# Include conf/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include conf/extra/httpd-manual.conf
@@ -692,6 +692,7 @@ Include conf/extra/proxy-html.conf
 
 # Secure (SSL/TLS) connections
 #Include conf/extra/httpd-ssl.conf
+
 #
 # Note: The following must must be present to support
 #       starting without SSL on platforms with no /dev/random equivalent
