--- a/docker/php/php-fpm.conf
+++ b/docker/php/php-fpm.conf
@@ -122,4 +122,4 @@ error_log = /var/log/php-fpm.log
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - /usr otherwise
-;include=/usr/local/etc/php/pool.d/*.conf
+include=/etc/php/7.2/fpm/pool.d/*.conf
